# fintellect-rag-terminal

./: .gitignore  app.py  janitor.py  pyproject.toml  requirements.txt
.github/workflows/: janitor.yml
.streamlit/: config.toml
src/: generate_ai_response.py  relevant_doc_search.py  scale_query.py  searchdocs.py  splitting.py  upsertdata.py  vectorembeddings.py
