[project]
name = "stock-market-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-huggingface>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "pinecone>=9.1.0",
    "pinecone-text>=0.11.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.2",
    "tavily>=1.1.0",
    "tavily-python>=0.7.26",
]

[server]
# Tell Streamlit not to recursively watch deep package dependencies
folderWatchBlacklist = [".venv", "node_modules"]